https://issues.apache.org/jira/browse/CAY

----------------------------------
Release: 4.2.3
Date:
----------------------------------
Changes/New Features:

CAY-2884 Upgrade gradle to 8.13
CAY-2893 Update velocity-engine-core dependency

Bug Fixes:

CAY-2883 License and notice templates are not processed by the Gradle build
CAY-2885 Modeler: DbImport fails to load DB schema view

----------------------------------
Release: 4.2.2
Date: March 14, 2025
----------------------------------
Changes/New Features:

CAY-2867 Tweak GraphBasedDbRowOpSorter logic to allow related updates
CAY-2872 CayenneModeler "Documentation" link is broken
CAY-2873 Change Orderings.orderedList() to accept a Collection rather than a List

Bug Fixes:

CAY-2866 DefaultDataDomainFlushAction breaks on circular relationship update
CAY-2868 Regression: DefaultDbRowOpSorter shouldn't sort update operations
CAY-2871 QualifierTranslator breaks on a relationship with a compound FK
CAY-2876 Memory leak in the ObjectStore
CAY-2879 Negative number for non parameterized ObjectSelect query not processed correctly

----------------------------------
Release: 4.2.1
Date: June 20, 2024
----------------------------------
Changes/New Features:

CAY-2849 Switch documentation to `hugo-asciidoctorj-extension`
CAY-2852 Update velocity-engine-core dependency
CAY-2856 Upgrade Gradle to 8.8
CAY-2857 Java 22 support

Bug Fixes:

CAY-2806 Incorrect processing of unicode escape syntax in JSON
CAY-2809 Cayenne Expression grammar doesn't allow custom function as an argument for string functions
CAY-2810 Can't use custom operator expression with aggregate functions
CAY-2813 Regression: Constants.CI_PROPERTY flag is no longer working for MySQL
CAY-2815 Incorrect translation of aliased expression
CAY-2838 Vertical Inheritance: Problem setting db attribute to null via flattened path
CAY-2840 Vertical Inheritance: Missing subclass attributes with joint prefetch